tests/ui/error-codes/E0532.stderr
error[E0532]: expected tuple struct or tuple variant, found constant `StructConst1`
  --> $DIR/E0532.rs:5:9
   |
LL |         StructConst1(_) => { },
   |         ^^^^^^^^^^^^ not a tuple struct or tuple variant

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0532`.
